@@ -1,6 +1,7 @@
 ver 0.21.6 (not yet released)
 * protocol
   - allow loading playlists specified as absolute filesystem paths
+  - fix negated filter expressions with multiple tag values
   - fix "list" with filter expression
 * input
   - cdio_paranoia: fix build failure due to missing #include
